--- a/config/config.properties
+++ b/config/config.properties
@@ -1,5 +1,5 @@
-inference_address=http://0.0.0.0:8080
-management_address=http://0.0.0.0:8081
+inference_address=http://localhost:8080
+management_address=http://localhost:8081
 
 ipex_enable=true
 cpu_launcher_enable=true
